@@ -37,3 +37,12 @@ class TestDossierWorkflow(IntegrationTestCase):
         expected = ['Cover (PDF)', 'Export as Zip', 'Print details (PDF)',
                     'Properties', 'dossier-transition-deactivate']
         self.assertItemsEqual(expected, self.get_action_menu_content())
+
+    @browsing
+    def test_available_actions_in_action_menu_for_managers(self, browser):
+        self.login(self.manager, browser)
+        browser.visit(self.dossier)
+        expected = ['Cover (PDF)', 'Export as Zip', 'Print details (PDF)',
+                    'Properties', 'Sharing', 'dossier-transition-deactivate',
+                    'dossier-transition-resolve', 'Policy...']
+        self.assertItemsEqual(expected, self.get_action_menu_content())
