@@ -7,6 +7,7 @@ Changelog
 
 - Add reference numbers to protected items admin view links. [Rotonen]
 - Sort repository excel exports by reference number. [Rotonen]
+- Allow managers to deactivate a dossier. [njohner]
 - Bump ftw.contentstats to get disk usage logging. [lgraf]
 - Whitelist "recently touched" data structures from CSRF write protection. [lgraf]
 - Bump docxcompose to 1.0.0a13 to get a numberig restart bugfix. [deiferni]
